[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/uni05_53.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Objects/CutsceneSystem-textBox.gd" type="Script" id=2]
[ext_resource path="res://Fonts/CyborgSister.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/Resource files/TextBox-Inverted-Olimac.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Sprites/spr_caja_txt_2.png" type="Texture" id=5]
[ext_resource path="res://SFX Files/textOlimac.wav" type="AudioStream" id=6]
[ext_resource path="res://Sprites/textboxNEW.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="CutsceneSystem-TextHandler" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="textBox" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2( 208, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
message = "asdasdas"
textName = "Nombre"

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/textBox"]
position = Vector2( 224, 32 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )

[node name="message_draw" type="RichTextLabel" parent="CanvasLayer/textBox"]
margin_left = -80.0
margin_top = 5.0
margin_right = 592.0
margin_bottom = 85.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Texto de ejemplo"
text = "Texto de ejemplo"
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textName" type="Label" parent="CanvasLayer/textBox"]
margin_left = -164.0
margin_top = -21.0
margin_right = -28.0
margin_bottom = -7.0
custom_fonts/font = SubResource( 2 )
text = "Text"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="talkSound" type="AudioStreamPlayer" parent="CanvasLayer/textBox"]
stream = ExtResource( 6 )

[node name="textFace" type="AnimatedSprite" parent="CanvasLayer/textBox"]
position = Vector2( -128, 44 )
scale = Vector2( 2, 2 )
frames = ExtResource( 4 )
frame = 1
playing = true
